<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >
    
    <TextView
        android:id="@+id/instructions_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/instructions_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/print_marker_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instructions_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/print_marker_label_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/camera_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/print_marker_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/camera_settings_button_text"
        android:onClick="clickCameraSettings" />

    <Button
        android:id="@+id/get_started_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/camera_settings_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/get_started_button_text"
        android:onClick="clickGetStarted" />

</RelativeLayout>
