<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/width_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/width_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/width_prompt_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/width_text_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/dimension_hint_text"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/height_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/width_row"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/height_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height_prompt_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/height_text_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/dimension_hint_text"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/preserve_aspect_ratio_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/height_row"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/preserve_aspect_ratio_checkbox_text"
        android:checked="true"/>

    <Button
        android:id="@+id/view_picture_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/preserve_aspect_ratio_checkbox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:onClick="clickViewPicture"
        android:text="@string/view_picture_button_text" />

</RelativeLayout>